--- a/php_quh/css/a.css
+++ b/php_quh/css/a.css
@@ -1,6 +1,5 @@
-<?php
 /*
-css_select.php - CSS code for SELECT widget
+a.css - CSS code for A widget
 
 Copyright (c) 2006 - 2007 NoisyB
 
@@ -21,77 +20,54 @@ Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 */
 
 
-/*
-  PHP
-
-  css_select_init()
-*/
-function
-css_select_init ()
-{
-?><style type="text/css" media="all">
-<!--
-
-
-.widget_select
+a
 {
   text-decoration:none;
-  position:relative;
-  z-index:0;
 }
 
 
-.widget_select + span
+a:hover
+{
+  color:#fff;
+  background-color:#00f;
+//  color:WindowText;
+//  background-color:Window;
+  text-decoration:none;
+}
+
+
+.widget_a
+{
+  position: relative;
+  z-index:0;
+  text-decoration:none;
+}
+
+
+.widget_a:hover
+{
+  z-index:1;
+}
+
+
+.widget_a span
 {
   display:none;
-  z-index:0;
 }
 
 
-.widget_select:hover + span
+.widget_a:hover span
 {
-  display:inline;
-  position:relative;
-  background-color:AppWorkspace;
-  padding:5px;
-  z-index:0;
-  white-space:nowrap;
-}
-
-
-.widget_select + span a
-{
-//  position:relative;
-  text-decoration:none;
-  z-index:0;
-}
-
-
-.widget_select:hover + span a
-{
-  text-decoration:none;
+  font:12px sans-serif,arial;
+  position:absolute;
+  top:30px;
+  left:10px;
+  padding:2px;
   display:block;
-//  position:relative;
+//  white-space:nowrap;
+  color:InfoText;
+  background-color:InfoBackground;
+  border:1px solid #000;
   text-align:left;
-  background-color:#fff;
-  color:#00f;
-  z-index:1;
-}
-
-
-.widget_select + span a:hover 
-{
-//  position:relative;
   text-decoration:none;
-  background-color:#00f; 
-  color:#fff;
-  z-index:1;
 }
-
-
--->
-</style><?php
-}
-
-
-?>
